[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
name = "mpu9250"
version = "0.7.4-alpha.0"
description = "no_std driver for the MPU9250 & onboard AK8963 (accelerometer + gyroscope +  magnetometer IMU)"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/copterust/mpu9250"

[dependencies]
embedded-hal = "0.2.1"
generic-array = "0.12.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nalgebra]
default-features = false
version = "0.16.4"
