[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev", "Jorge Aparicio <jorge@japaric.io>"]
name = "mpu9250"
version = "0.12.1-alpha.0"
description = "no_std driver for the MPU9250 & onboard AK8963 (accelerometer + gyroscope +  magnetometer IMU)"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/copterust/mpu9250"

[dependencies]
embedded-hal = "0.2.3"
generic-array = "0.12.0"
bitflags = "1.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.nalgebra]
default-features = false
version = "0.18"

[dev-dependencies]
linux-embedded-hal = "0.2"

[features]
# Enable the I2C MPU interface. This disables the SPI interface. All function
# names remain consistent. Arguments change from (SPI, nCS) pairs to I2C
i2c = []
